Fixing entry point

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fun-enums",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Functional enum implementation",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
