--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   - node_modules
 script:
   - npm test
-  - npm build
+  - npm run build
 deploy:
   provider: npm
   email: jkjones.dev@gmail.com
