--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "fun-enums",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Functional enum implementation",
   "main": "dist/index.js",
+  "homepage": "https://funenums.danggoodcode.com",
   "scripts": {
     "build": "babel src -d dist",
     "test": "jest"
