--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "fun-enums",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Functional enum implementation",
   "main": "dist/index.js",
   "homepage": "https://funenums.danggoodcode.com",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Jared K Jones",
   "license": "ISC",
